--- a/index.html
+++ b/index.html
@@ -39,82 +39,93 @@
         <ul>
             <li>
                 <a href="#" class="nav-item">
-                    <i class="fa-solid fa-house-chimney"></i>
+                    <i class="fa-solid fa-house-chimney nav-icon"></i>
                     <span class="nav-link">Home</span>
                 </a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-square-rss"></i> <span
+            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-square-rss nav-icon"></i> <span
                         class="nav-link">Shorts</span>
                 </a>
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-house-chimney"></i><span class="nav-link">
-                        Subscriptions</span> </a>
+            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-book-open nav-icon"></i> <span
+                        class="nav-link">Subscriptions</span>
+                </a>
+            </li>
+
+            <hr class="hr-rules">
+
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book nav-icon"></i> <span
+                        class="nav-link">Library</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book"></i> <span class="nav-link">Library</span></a>
+            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-clock-rotate-left nav-icon"></i><span
+                        class="nav-link">History</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-clock-rotate-left"></i><span
-                    class="nav-link">History</span></a>
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-video nav-icon"></i> <span class="nav-link">Your
+                        videos</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-video"></i> <span class="nav-link">Your
-                    videos</span></a>
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-clock-rotate-left nav-icon"></i> <span
+                        class="nav-link">Watch Later</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-clock-rotate-left"></i> <span
-                    class="nav-link">Watch Later</span></a>
+            <li> <a href="#" class="nav-item"><i class="fa-regular fa-thumbs-up nav-icon"></i> <span
+                        class="nav-link">Liked
+                        videos</span> </a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-regular fa-thumbs-up"></i> <span class="nav-link">Liked
-                    videos</span> </a>
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-house-chimney nav-icon"></i> <span
+                        class="nav-link">Watch
+                        Later</span></a>
+
+            </li>
+            <hr class="hr-rules">
+            <li> <a href="#" class="nav-item"><img src="/espn.png" class="nav-icon" alt=""> <span
+                        class="nav-link">ESPN</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-house-chimney"></i> <span class="nav-link">Watch
-                    Later</span></a>
+            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon"><span
+                        class="nav-link">NBA</span></a>
+
+            </li>
+            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class="
+                        nav-link">TEDx Talks</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"><img src="/espn.png" alt=""
-                    style="width: 20px; height: 20px; border-radius: 100%;"> <span class="nav-link">ESPN</span></a>
+            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class=" nav-link">TEDx
+                    Talks</span></a>
+            
+            </li>
+            <hr class="hr-rules">
+
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book-open nav-icon"></i><span
+                        class="nav-link">Trending</span> </a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"> <img src="/espn.png" alt=""
-                    style="width: 20px; height: 20px; border-radius: 100%;"><span class="nav-link">NBA</span></a>
-
-            </li>
-            <li> <a href="#" class="nav-item"><img src="/espn.png" alt=""
-                    style="width: 20px; height: 20px; border-radius: 100%;"><span class="nav-link">TEDx Talks</span></a>
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-music nav-icon"></i> <span
+                        class="nav-link">Music</span></a>
 
             </li>
 
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book-open"></i><span
-                    class="nav-link">Trending</span> </a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-music"></i> <span class="nav-link">Music</span></a>
+            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-headset nav-icon"></i><span
+                        class="nav-link">Gaming</span></a>
 
             </li>
 
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-headset"></i><span
-                    class="nav-link">Gaming</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-baseball-bat-ball"></i><span
-                    class="nav-link">Sports</span></a>
+            <li> <a href="#" class="nav-item"><i class="fa-solid fa-baseball-bat-ball nav-icon"></i><span
+                        class="nav-link">Sports</span></a>
 
             </li>
 
