--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- Youtube Logo -->
         <span>
-            <a href="#"><img src="/youtube-new-logo.png" alt="" style="width: 100px;"></a>
+            <a href="#"><img src="/finalyout.png" alt="" style="width: 200px;"></a>
 
         </span>
 
