--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
 
-    <!-- Addomg  -->
-    <link rel="stylesheet" href="/styles.css">
+
+    <!-- Inserting Favicon  -->
+    <link rel="icon" type="image/x-icon" href="/YouTube_full-color_icon_(2017).svg">
+
+    <!-- Adding External Stylesheet  -->
+    <link rel="stylesheet" href="./styles.css">
+
 
 
 </head>
@@ -103,9 +108,10 @@
 
             </li>
 
-            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class=" nav-link">TEDx
+            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class="
+                        nav-link">TEDx
                     Talks</span></a>
-            
+
             </li>
             <hr class="hr-rules">
 
