--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <!-- Side Navigation Section -->
-    <nav>
+    <nav class="sideNav">
 
         <!-- Youtube Logo -->
         <span>
@@ -142,6 +142,12 @@
         </ul>
     </nav>
 
+
+    <nav class="mainNav">
+        <div>
+            
+        </div>
+    </nav>
 
     <h1>sdsdsdsd</h1>
 
