--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- Youtube Logo -->
         <span>
-            <a href="#"><img src="/finalyout.png" alt="" style="width: 200px;"></a>
+            <a href="#"><img src="/finalyout.png" alt=""></a>
 
         </span>
 
