--- a/index.html
+++ b/index.html
@@ -31,125 +31,26 @@
 
 <body>
 
-    <!-- Side Navigation Section -->
-    <nav class="sideNav">
 
-        <!-- Youtube Logo -->
-        <span>
-            <a href="#"><img src="/finalyout.png" alt=""></a>
-
-        </span>
-
-
-        <ul>
-            <li>
-                <a href="#" class="nav-item">
-                    <i class="fa-solid fa-house-chimney nav-icon"></i>
-                    <span class="nav-link">Home</span>
-                </a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-square-rss nav-icon"></i> <span
-                        class="nav-link">Shorts</span>
-                </a>
-            </li>
-
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-book-open nav-icon"></i> <span
-                        class="nav-link">Subscriptions</span>
-                </a>
-            </li>
-
-            <hr class="hr-rules">
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book nav-icon"></i> <span
-                        class="nav-link">Library</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-clock-rotate-left nav-icon"></i><span
-                        class="nav-link">History</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-video nav-icon"></i> <span class="nav-link">Your
-                        videos</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-clock-rotate-left nav-icon"></i> <span
-                        class="nav-link">Watch Later</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-regular fa-thumbs-up nav-icon"></i> <span
-                        class="nav-link">Liked
-                        videos</span> </a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-house-chimney nav-icon"></i> <span
-                        class="nav-link">Watch
-                        Later</span></a>
-
-            </li>
-            <hr class="hr-rules">
-            <li> <a href="#" class="nav-item"><img src="/espn.png" class="nav-icon" alt=""> <span
-                        class="nav-link">ESPN</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon"><span
-                        class="nav-link">NBA</span></a>
-
-            </li>
-            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class="
-                        nav-link">TEDx Talks</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"> <img src="/espn.png" class="nav-icon" alt="""><span class="
-                        nav-link">TEDx
-                    Talks</span></a>
-
-            </li>
-            <hr class="hr-rules">
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-book-open nav-icon"></i><span
-                        class="nav-link">Trending</span> </a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-music nav-icon"></i> <span
-                        class="nav-link">Music</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"> <i class="fa-solid fa-headset nav-icon"></i><span
-                        class="nav-link">Gaming</span></a>
-
-            </li>
-
-            <li> <a href="#" class="nav-item"><i class="fa-solid fa-baseball-bat-ball nav-icon"></i><span
-                        class="nav-link">Sports</span></a>
-
-            </li>
-
-
-
-
-
-        </ul>
-    </nav>
-
-
-    <nav class="mainNav">
-        <div>
-            
+    <!-- Main Navigation Bar  -->
+    <nav id="mainNav">
+        <div class="left">
+            <img src="./project-icons/menu-icon.svg" width="20" height="20" alt="ham-menu-icon">
+            <img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="main-Youtube-Logo">
         </div>
+        <div class="middle">
+
+            <form action="" class="search-bar">
+                <label for="site-search"></label>
+                <input type="search" id="site-search" name="q" placeholder="Search">
+
+                <button class="search-button"> sd </button>
+            </form>
+
+        </div>
+        <div class="right"></div>
     </nav>
 
-    <h1>sdsdsdsd</h1>
 
 </body>
 
