--- a/index.html
+++ b/index.html
@@ -34,21 +34,46 @@
 
     <!-- Main Navigation Bar  -->
     <nav id="mainNav">
-        <div class="left">
-            <img src="./project-icons/menu-icon.svg" width="20" height="20" alt="ham-menu-icon">
-            <img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="main-Youtube-Logo">
-        </div>
-        <div class="middle">
 
+        <div class="left flex-div">
+            <img src="./project-icons/menu-icon.svg" alt="ham-menu-icon" class="menu-icon-image">
+            <img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="youtube-logo-img">
+        </div>
+
+
+        <div class="middle flex-div">
             <form action="" class="search-bar">
                 <label for="site-search"></label>
                 <input type="search" id="site-search" name="q" placeholder="Search">
 
-                <button class="search-button"> sd </button>
+                <button class="search-button"> <img src="/project-icons/search.svg" alt="">
+                </button>
+
+               
             </form>
+            <span>
+                <img src="/project-icons/voice-search-icon.svg" alt="">
+            </span>
 
         </div>
-        <div class="right"></div>
+
+        <div class="right flex-div">
+            <span>
+                <img src="/project-icons/upload.svg" alt="upload-image">
+            </span>
+            <span>
+                <img src="/project-icons/notifications.svg" alt="">
+            </span>
+
+            <span class="user-icon">
+                N
+            </span>
+
+
+
+        </div>
+
+
     </nav>
 
 
