--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <!-- Main Navigation Bar  -->
     <nav id="mainNav">
 
-        <div class="left flex-div">
+        <div class="nav-left flex-div">
             <img src="./project-icons/menu-icon.svg" alt="ham-menu-icon" class="menu-icon-image">
             <img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="youtube-logo-img">
         </div>
 
 
-        <div class="middle flex-div">
+        <div class="nav-middle flex-div">
             <form action="" class="search-bar flex-div" >
              
                 <input type="search" id="site-search" name="q" placeholder="Search">
@@ -55,7 +55,7 @@
 
         </div>
 
-        <div class="right flex-div">
+        <div class="nav-right flex-div">
             <span>
                 <img src="/project-icons/upload.svg" alt="upload-image">
             </span>
