side bar complete

--- a/index.html
+++ b/index.html
@@ -115,6 +115,46 @@
 
 
         <h2>Subscriptions</h2>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/images/gerard.png" alt="" class="sub-img">
+            <span>Eren Yagaer</span>
+        </div>
+
+        <hr>
+
+        <h2>Explore</h2>
+        <div class="flex-div sideNav-tab">
+            <img src="/project-icons/explore.svg" alt="">
+            <span>History</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/project-icons/youtube-apps.svg" alt="">
+            <span>Your Videos</span>
+        </div>
+        <div class="flex-div sideNav-tab">
+            <img src="/project-icons/youtube-music.svg" alt="">
+            <span>Your Music</span>
+        </div>
 
 
     </nav>
