--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
     </nav>
 
+
+    <!-- Side Navigation Start  -->
     <nav id="sideNav">
 
         <div class="flex-div sideNav-tab">
@@ -158,6 +160,11 @@
 
 
     </nav>
+
+    <!-- Side Navigation End -->
+
+
+
 
 
 </body>
