Fixed Sidebar Collapsing

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
     <nav id="mainNav">
 
         <div class="nav-left flex-div">
-            <img src="./project-icons/menu-icon.svg" alt="ham-menu-icon" class="menu-icon-image">
-            <img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="youtube-logo-img">
+            <a href="#" id="toggle-button">
+                <img src="./project-icons/menu-icon.svg" alt="ham-menu-icon" class="menu-icon-image">
+            </a>
+
+            <a href="#"><img src="./project-icons/youtube-logo.svg" alt="main Youtube Logo" class="youtube-logo-img"></a>
+
         </div>
 
 
@@ -78,10 +82,10 @@
     <!-- Side Navigation Start  -->
     <nav id="sideNav">
 
-        <div class="flex-div sideNav-tab">
+        <a class="flex-div sideNav-tab">
             <img src="/project-icons/home.svg" alt="">
             <span>Home</span>
-        </div>
+        </a>
         <div class="flex-div sideNav-tab">
             <img src="/project-icons/upload.svg" alt="">
             <span>Shorts</span>
@@ -167,6 +171,8 @@
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
